--- a/index.pug
+++ b/index.pug
@@ -4,5 +4,86 @@ html(lang="ru")
     meta(charset="utf-8")
     title HTML Academy: Техномарт
   body
-    p Репозиторий создан для обучения на профессиональном онлайн‑курсе 
-    a(href="https://htmlacademy.ru/intensive/htmlcss") «HTML и CSS, уровень 1».
+    header
+      h1 техномарт
+      ul
+        li Поиск:
+        li Закладки: 0
+        li Корзина: 0
+        li Оформить заказ
+      section
+        h2 главные данные
+        p Интернет-магазин 
+        br/ строительных материалов 
+        br/ и инструментов для ремонта
+        p +7 (812) 555-05-55
+        br/ г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+        button(type='submit') Войти
+        button(type='submit') Регистриция
+        nav
+          ul
+            li
+              a(href="") Главная
+            li
+              a(href="") Компания
+            li
+              a(href="") Каталог
+            li
+              a(href="") Новости
+            li
+              a(href="") Спецпредложения
+            li
+              a(href="") Доставка
+            li
+              a(href="") Контакты
+    main
+      section
+        h2 Компания "Техномарт"
+        p Настоящий мужской шопинг начинается здесь! огромный выбор товаров для ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах
+        br/ Мы можемдоставить ваш товар в самые отдельные точки России!
+        br/ Техномарт работает со многими ранспортными компаниями:
+        ul
+          li Деловые линии
+          li Автотрейдинг
+          li ЖелДорЭкспедиция
+        a(href="about") Подробнее о компании 
+      section
+        h2 Контакты
+        p можете выбрать товар сами,
+        br/ заехав в наш офис:
+        iframe(src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;source=constructor" width="300" height="158" frameborder="0")
+        button(type="submit") Заблудились? Напишите нам!
+    footer
+      section
+        h2 Техномарт
+        p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+        br/ +7 (812) 555-05-55
+        ul
+          li
+            a(href="") Компания
+          li
+            a(href="") Новости
+          li
+            a(href="") Каталог
+          li
+            a(href="") Доставка
+          li
+            a(href="") Контакты
+          li
+            a(href="") Материалы
+          li
+            a(href="") Техника
+          li
+            a(href="") Инструмент
+          li
+            a(href="") Спецпредложения
+      section
+        p © 2010-2017 Компания "Техномарт"
+        br/ Все права защищены
+        img(src="", alt="alt")
+        img(src="", alt="alt")
+        img(src="", alt="alt")
+        p Обратная связь
+        br/ mail@htmlacademy.ru
+        p Разработано
+        br/ htmlacademy.ru
