added catalog page, links on main page

--- a/index.pug
+++ b/index.pug
@@ -23,11 +23,11 @@ html(lang="ru")
         nav
           ul
             li
-              a(href="") Главная
+              a(href="#") Главная
             li
               a(href="") Компания
             li
-              a(href="") Каталог
+              a(href="pages/catalog.html") Каталог
             li
               a(href="") Новости
             li
@@ -64,7 +64,7 @@ html(lang="ru")
           li
             a(href="") Новости
           li
-            a(href="") Каталог
+            a(href="pages/catalog.html") Каталог
           li
             a(href="") Доставка
           li
