--- a/catalog.pug
+++ b/catalog.pug
@@ -5,19 +5,17 @@ html(lang="ru")
     title HTML Academy: Техномарт
   body
     header
-      h1 техномарт
-      ul
-        li Поиск:
-        li Закладки: 0
-        li Корзина: 10
-        li Оформить заказ
+      .logo техномарт
+        .search Поиск:
+        .bookmarks Закладки: 0
+        .mart Корзина: 0
+        .order Оформить заказ
       section
         h2 главные данные
-        p Интернет-магазин 
-        br/ строительных материалов 
-        br/ и инструментов для ремонта
-        p +7 (812) 555-05-55
-        br/ г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+        p Интернет-магазин строительных материалов и инструментов для ремонта
+        p
+          a(href="tel:") +7 (812) 555-05-55
+        p . Санкт-петербург, ул. Б. Конюшенная, д. 19/8
         button(type='submit') Равшан Джамшутович
         ul
           li
@@ -27,11 +25,11 @@ html(lang="ru")
         nav
           ul
             li
-              a(href="../index.html") Главная
+              a(href="index.html") Главная
             li
               a(href="") Компания
             li
-              a(href="#") Каталог
+              a.current Каталог
             li
               a(href="") Новости
             li
@@ -49,21 +47,24 @@ html(lang="ru")
         li
           a(href="") Инструмент
         li
-          a(href="") Перфораторы
+          a Перфораторы
       h2 Перфораторы
       section
-        p Производители:
-        ul
-          li bosch
-          li интерскол
-          li makita
-          li dewalt
-          li hitachi
-        p питание:
-        ul
-          li аккумуляторные
-          li сетевые
-        button(type='submit') Показать
+        form(action="" method="method")
+          fieldset
+            legend
+          p Производители:
+          ul
+            li bosch
+            li интерскол
+            li makita
+            li dewalt
+            li hitachi
+          p питание:
+          ul
+            li аккумуляторные
+            li сетевые
+          button(type='submit') Показать
         ul
           li
             img(src="", alt="")
@@ -109,21 +110,23 @@ html(lang="ru")
             a(href="") 12500 Р.
       section
     footer
-      section
-        h2 Техномарт
-        p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
-        br/ +7 (812) 555-05-55
+      .footer_top
+        .footer_logo Техномарт
         ul
           li
             a(href="") Компания
           li
             a(href="") Новости
           li
-            a(href="#") Каталог
+            a(href="catalog.html") Каталог
           li
             a(href="") Доставка
           li
             a(href="") Контакты
+      .footer_middle
+        p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+        a(href="tel:") +7 (812) 555-05-55 
+        ul 
           li
             a(href="") Материалы
           li
@@ -132,13 +135,9 @@ html(lang="ru")
             a(href="") Инструмент
           li
             a(href="") Спецпредложения
-      section
-        p © 2010-2017 Компания "Техномарт"
-        br/ Все права защищены
-        img(src="", alt="alt")
-        img(src="", alt="alt")
+      .footer_bottom
+        p © 2010-2017 Компания "Техномарт" Все права защищены
         img(src="", alt="alt")
         p Обратная связь
-        br/ mail@htmlacademy.ru
-        p Разработано
-        br/ htmlacademy.ru
+        a(href="mailto:") mail@htmlacademy.ru
+        p Разработано htmlacademy.ru
