--- a/index.pug
+++ b/index.pug
@@ -5,29 +5,27 @@ html(lang="ru")
     title HTML Academy: Техномарт
   body
     header
-      h1 техномарт
-      ul
-        li Поиск:
-        li Закладки: 0
-        li Корзина: 0
-        li Оформить заказ
+      .logo техномарт
+        .search Поиск:
+        .bookmarks Закладки: 0
+        .mart Корзина: 0
+        .order Оформить заказ
       section
         h2 главные данные
-        p Интернет-магазин 
-        br/ строительных материалов 
-        br/ и инструментов для ремонта
-        p +7 (812) 555-05-55
-        br/ г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+        p Интернет-магазин строительных материалов и инструментов для ремонта
+        p
+          a(href="tel:") +7 (812) 555-05-55
+        p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
         button(type='submit') Войти
         button(type='submit') Регистриция
         nav
           ul
             li
-              a(href="#") Главная
+              a.current Главная
             li
               a(href="") Компания
             li
-              a(href="pages/catalog.html") Каталог
+              a(href="catalog.html") Каталог
             li
               a(href="") Новости
             li
@@ -46,29 +44,30 @@ html(lang="ru")
           li Деловые линии
           li Автотрейдинг
           li ЖелДорЭкспедиция
-        a(href="about") Подробнее о компании 
+        a(href="about.html") Подробнее о компании 
       section
         h2 Контакты
-        p можете выбрать товар сами,
-        br/ заехав в наш офис:
+        p можете выбрать товар сами, заехав в наш офис:
         iframe(src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;source=constructor" width="300" height="158" frameborder="0")
         button(type="submit") Заблудились? Напишите нам!
     footer
-      section
-        h2 Техномарт
-        p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
-        br/ +7 (812) 555-05-55
+      .footer_top
+        .footer_logo Техномарт
         ul
           li
             a(href="") Компания
           li
             a(href="") Новости
           li
-            a(href="pages/catalog.html") Каталог
+            a(href="catalog.html") Каталог
           li
             a(href="") Доставка
           li
             a(href="") Контакты
+      .footer_middle
+        p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+        a(href="tel:") +7 (812) 555-05-55 
+        ul 
           li
             a(href="") Материалы
           li
@@ -77,13 +76,9 @@ html(lang="ru")
             a(href="") Инструмент
           li
             a(href="") Спецпредложения
-      section
-        p © 2010-2017 Компания "Техномарт"
-        br/ Все права защищены
-        img(src="", alt="alt")
-        img(src="", alt="alt")
+      .footer_bottom
+        p © 2010-2017 Компания "Техномарт" Все права защищены
         img(src="", alt="alt")
         p Обратная связь
-        br/ mail@htmlacademy.ru
-        p Разработано
-        br/ htmlacademy.ru
+        a(href="mailto:") mail@htmlacademy.ru
+        p Разработано htmlacademy.ru
