--- a/index.pug
+++ b/index.pug
@@ -2,83 +2,87 @@ doctype
 html(lang="ru")
   head
     meta(charset="utf-8")
-    title HTML Academy: Техномарт
+    link(rel="stylesheet", href="css/style.css")
+    title HTML Academy: Техномарт Главная
   body
-    header
-      .logo техномарт
+    .wrapper
+      header.header
+        .logo техномарт
         .search Поиск:
         .bookmarks Закладки: 0
         .mart Корзина: 0
         .order Оформить заказ
-      section
-        h2 главные данные
-        p Интернет-магазин строительных материалов и инструментов для ремонта
-        p
+        section
+          h2 главные данные
+          p Интернет-магазин
+          p строительных материалов
+          p и инструментов для ремонта
           a(href="tel:") +7 (812) 555-05-55
-        p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
-        button(type='submit') Войти
-        button(type='submit') Регистриция
-        nav
+          p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+          a(href="login.html") Войти
+          a(href="registration.html") Регистриция
+          nav
+            ul
+              li
+                a.current Главная
+              li
+                a(href="") Компания
+              li
+                a(href="catalog.html") Каталог
+              li
+                a(href="") Новости
+              li
+                a(href="") Спецпредложения
+              li
+                a(href="") Доставка
+              li
+                a(href="") Контакты
+      main
+        section
+          h2 Компания "Техномарт"
+          p Настоящий мужской шопинг начинается здесь! огромный выбор товаров для ремонта и
+          p строительства не оставит равнодушным любителей сэкономить на гастарбайтерах. 
+          p Мы можемдоставить ваш товар в самые отдельные точки России!
+          p Техномарт работает со многими ранспортными компаниями:
           ul
-            li
-              a.current Главная
+            li Деловые линии
+            li Автотрейдинг
+            li ЖелДорЭкспедиция
+          a(href="about.html") Подробнее о компании 
+        section
+          h2 Контакты
+          p можете выбрать товар сами, заехав в наш офис:
+          iframe(src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;source=constructor" width="300" height="158" frameborder="0")
+          button(type="submit") Заблудились? Напишите нам!
+      footer
+        .footer_top
+          .footer_logo Техномарт
+          ul
             li
               a(href="") Компания
             li
-              a(href="catalog.html") Каталог
-            li
               a(href="") Новости
             li
-              a(href="") Спецпредложения
+              a(href="catalog.html") Каталог
             li
               a(href="") Доставка
             li
               a(href="") Контакты
-    main
-      section
-        h2 Компания "Техномарт"
-        p Настоящий мужской шопинг начинается здесь! огромный выбор товаров для ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах
-        br/ Мы можемдоставить ваш товар в самые отдельные точки России!
-        br/ Техномарт работает со многими ранспортными компаниями:
-        ul
-          li Деловые линии
-          li Автотрейдинг
-          li ЖелДорЭкспедиция
-        a(href="about.html") Подробнее о компании 
-      section
-        h2 Контакты
-        p можете выбрать товар сами, заехав в наш офис:
-        iframe(src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;source=constructor" width="300" height="158" frameborder="0")
-        button(type="submit") Заблудились? Напишите нам!
-    footer
-      .footer_top
-        .footer_logo Техномарт
-        ul
-          li
-            a(href="") Компания
-          li
-            a(href="") Новости
-          li
-            a(href="catalog.html") Каталог
-          li
-            a(href="") Доставка
-          li
-            a(href="") Контакты
-      .footer_middle
-        p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
-        a(href="tel:") +7 (812) 555-05-55 
-        ul 
-          li
-            a(href="") Материалы
-          li
-            a(href="") Техника
-          li
-            a(href="") Инструмент
-          li
-            a(href="") Спецпредложения
-      .footer_bottom
-        p © 2010-2017 Компания "Техномарт" Все права защищены
-        img(src="", alt="alt")
-        p Обратная связь
-        a(href="mailto:") mail@htmlacademy.ru
-        p Разработано htmlacademy.ru
+        .footer_middle
+          p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+          a(href="tel:") +7 (812) 555-05-55 
+          ul 
+            li
+              a(href="") Материалы
+            li
+              a(href="") Техника
+            li
+              a(href="") Инструмент
+            li
+              a(href="") Спецпредложения
+        .footer_bottom
+          p © 2010-2017 Компания "Техномарт" Все права защищены
+          img(src="", alt="alt")
+          p Обратная связь
+          a(href="mailto:") mail@htmlacademy.ru
+          p Разработано htmlacademy.ru
