--- a/catalog.pug
+++ b/catalog.pug
@@ -8,45 +8,50 @@ html(lang="ru")
     header.page-header
       .container
         .top-row
-          .logo-top техномарт
+          .logo-top
             img(src="", alt="alt")
-          .search Поиск:
+          .search
+            form(action="" method="method")
+              input(type="text" placeholder="Поиск:")
+              button
           .bookmarks Закладки:
             span 0
           .mart Корзина:
             span 10
           .order Оформить заказ
         .middle-row
-          h2 главные данные
-          p Интернет-магазин строительных материалов и инструментов для ремонта
-          a(href="tel:+78125550555")
-          p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
-          a(href="customer.html") Равшан Джамшутович
-          ul
-            li
-              a(href="") Мои Заказы
-            li
-              a(href="") Личный кабинет
-        .bottom-row
-          nav
+          .middle-row-text
+            h2 главные данные
+            p Интернет-магазин строительных материалов и инструментов для ремонта
+          .middle-row-address
+            a(href="tel:+78125550555") +7 (812) 555-05-55
+            p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+          .middle-row-authorization
+            a(href="customer.html") Равшан Джамшутович
             ul
               li
-                a(href="index.html") Главная
+                a(href="") Мои Заказы
               li
-                a(href="") Компания
-              li
-                a.current Каталог
-              li
-                a(href="") Новости
-              li
-                a(href="") Спецпредложения
-              li
-                a(href="") Доставка
-              li
-                a(href="") Контакты
-    main.content
+                a(href="") Личный кабинет
+        nav
+          ul
+            li
+              a(href="index.html") Главная
+            li
+              a(href="") Компания
+            li
+              a.current Каталог
+            li
+              a(href="") Новости
+            li
+              a(href="") Спецпредложения
+            li
+              a(href="") Доставка
+            li
+              a(href="") Контакты
+    main.page-content
       .container
-        ul
+        ul.breadcrumbs
           li
             a(href="index.html") 
               img(src="", alt="home")
@@ -56,91 +61,97 @@ html(lang="ru")
             a(href="") Инструмент
           li
             a.current Перфораторы
-        .title Перфораторы
-        .aside
-          form(action="" method="post")
+        h1 Перфораторы
+        aside.aside
+          p.filter ФИЛЬТР:
+          h3 ЦЕНА:
+          .choose-price
+            label(for="rating")
+            input(id="rate" name="rate" min="0" max="30000" step="500" value="30000")
+          form(action="" method="get")
             fieldset.choose-filter
               legend Производители:
               p
-                input(type="checkbox", name="manufacturer")
-                label bosch
+                input(type="checkbox" name="bosch" id="")
+                label(for="") bosch
               p
-                input(type="checkbox", name="manufacturer") 
+                input(type="checkbox" name="interscol") 
                 label интерскол
               p
-                input(type="checkbox", name="manufacturer") 
+                input(type="checkbox" name="makita") 
                 label makita
               p
-                input(type="checkbox", name="manufacturer") 
+                input(type="checkbox" name="dewalt") 
                 label dewalt
               p
-                input(type="checkbox", name="manufacturer") 
+                input(type="checkbox" name="hitachi") 
                 label hitachi
             fieldset.choose-filter-2
               legend питание:
               p
-                input(type="radio", name="charge") 
+                input(type="radio" name="charge" value="") 
                 label аккумуляторные
               p 
-                nput(type="radio", name="charge") 
+                input(type="radio" name="charge" value="") 
                 label сетевые
             button(type="submit") Показать
         .goods
-          .block
+          .goods-item
             a(href="")
               img(src="", alt="")
-            h3 Перфоратор BOSCH BFG 3000
-            p 22500 Р.
-            p 15500 Р.
-          .block
+            h3.title Перфоратор BOSCH BFG 3000
+            s.old-price 22500 Р.
+            p.price 15500 Р.
+          .goods-item
             a(href="")
               img(src="", alt="")
-            h3 Перфоратор BOSCH BFG 6000
-            p 30500 Р.
-            p 25500 Р.
-          .block
+            h3.title Перфоратор BOSCH BFG 6000
+            s.old-price 30500 Р.
+            p.price 25500 Р.
+          .goods-item
             a(href="")
               img(src="", alt="")
-            h3 Перфоратор BOSCH BFG 2000
-            p 12500 Р.
-          .block
+            h3.title Перфоратор BOSCH BFG 2000
+            p.price 12500 Р.
+          .goods-item
             a(href="")
               img(src="", alt="")
-            h3 Перфоратор BOSCH BFG 3000
-            p 22500 Р.
-            p 15500 Р.
-          .block
+            h3.title Перфоратор BOSCH BFG 3000
+            s.old-price 22500 Р.
+            p.price 15500 Р.
+          .goods-item
             a(href="")
               img(src="", alt="")
-            h3 Перфоратор BOSCH BFG 6000
-            p 30500 Р.
-            p 25500 Р.
-          .block
+            h3.title Перфоратор BOSCH BFG 6000
+            s.old-price 30500 Р.
+            p.price 25500 Р.
+          .goods-item
             a(href="")
               img(src="", alt="")
-            h3 Перфоратор BOSCH BFG 2000
-            p 12500 Р.
-          .block
+            h3.title Перфоратор BOSCH BFG 2000
+            p.price 12500 Р.
+          .goods-item
             a(href="")
               img(src="", alt="")
-            h3 Перфоратор BOSCH BFG 3000
-            p 22500 Р.
-            p 15500 Р.
-          .block
+            h3.title Перфоратор BOSCH BFG 3000
+            s.old-price 22500 Р.
+            p.price 15500 Р.
+          .goods-item
             a(href="")
               img(src="", alt="")
-            h3 Перфоратор BOSCH BFG 6000
-            p 30500 Р.
-            p 25500 Р.
-          .block
+            h3.title Перфоратор BOSCH BFG 6000
+            s.old-price 30500 Р.
+            p.price 25500 Р.
+          .goods-item
             a(href="")
               img(src="", alt="")
-            h3 Перфоратор BOSCH BFG 2000
-            p 12500 Р.
+            h3.title Перфоратор BOSCH BFG 2000
+            p.price 12500 Р.
     footer.page-footer
       .container
         .top-row
-          .logo-bottom  Техномарт
+          .logo-bottom
+            img(src="", alt="alt")
           ul
             li
               a(href="") Компания
@@ -154,7 +165,7 @@ html(lang="ru")
               a(href="") Контакты
         .middle-row
           p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
-          a(href="tel:+78125550555") 
+            a(href="tel:+78125550555") +7 (812) 555-05-55
           ul 
             li
               a(href="") Материалы
@@ -168,5 +179,5 @@ html(lang="ru")
           p © 2010-2017 Компания "Техномарт" Все права защищены
           img(src="", alt="alt")
           p Обратная связь
-          a(href="mailto:mail@htmlacademy.ru")
-          p Разработано htmlacademy.ru
+          a(href="mailto:mail@htmlacademy.ru") mail@htmlacademy.ru
+          a(href="https://htmlacademy.ru/intensive/htmlcss") Разработано htmlacademy.ru
