--- a/index.pug
+++ b/index.pug
@@ -2,64 +2,194 @@ doctype
 html(lang="ru")
   head
     meta(charset="utf-8")
+    link(rel="stylesheet", href="")
     link(rel="stylesheet", href="css/style.css")
     title HTML Academy: Техномарт Главная
   body.page
     header.page-header
       .container
         .top-row
-          .logo-top техномарт
+          .logo-top
             img(src="", alt="alt")
-          .search Поиск:
+          .search
+            form(action="" method="method")
+              input(type="text" placeholder="Поиск:")
+              button
           .bookmarks Закладки:
             span 0
           .mart Корзина:
             span 0
           .order Оформить заказ
         .middle-row
-          h2 главные данные
-          p Интернет-магазин строительных материалов и инструментов для ремонта
-          a(href="tel:+78125550555")
-          p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
-          a(href="login.html") Войти
-          a(href="registration.html") Регистриция
-        .bottom-row
-          nav
-            ul
-              li
-                a.current Главная
-              li
-                a(href="") Компания
-              li
-                a(href="catalog.html") Каталог
-              li
-                a(href="") Новости
-              li
-                a(href="") Спецпредложения
-              li
-                a(href="") Доставка
-              li
-                a(href="") Контакты
+          .middle-row-text
+            h2 главные данные
+            p Интернет-магазин строительных материалов и инструментов для ремонта
+          .middle-row-address
+            a(href="tel:+78125550555") +7 (812) 555-05-55
+            p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+          .middle-row-authorization
+            a(href="login.html") Войти
+            a(href="registration.html") Регистриция
+        nav
+          ul
+            li
+              a.current Главная
+            li
+              a(href="") Компания
+            li
+              a(href="catalog.html") Каталог
+            li
+              a(href="") Новости
+            li
+              a(href="") Спецпредложения
+            li
+              a(href="") Доставка
+            li
+              a(href="") Контакты
     main.content
-      .company
-        h2 Компания "Техномарт"
-        p Настоящий мужской шопинг начинается здесь! огромный выбор товаровдля ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах. 
-        p Мы можемдоставить ваш товар в самые отдельные точки России! Техномарт работает со многими ранспортными компаниями:
-        ul
-          li Деловые линии
-          li Автотрейдинг
-          li ЖелДорЭкспедиция
-        a(href="about.html") Подробнее о компании 
-      .contacts
-        h2 Контакты
-        p можете выбрать товар сами, заехав в наш офис:
-        iframe(src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;source=constructor" width="300" height="158" frameborder="0")
-        button(type="submit") Заблудились? Напишите нам!
+      .content-topics
+        .topic-item
+          h3
+          a(href="")
+          img(src="", alt="")
+        .topic-item
+          h3
+          a(href="")
+          img(src="", alt="")
+        .topic-item
+          h3
+          a(href="")
+          img(src="", alt="")
+        .slider
+          input(type="radio" name="respond" id="desktop" checked)
+          article(id="slide")
+            input(type="radio", name="slide" id="switch0" checked)
+            input(type="radio", name="slide" id="switch1")
+            div(id="slides")
+              div(id="overflow")
+                .image
+                  article
+                    .topic-item-slide
+                      h3 Перфораторы
+                      p Настоящие мужские игрушки
+                      a(href="catalog.html")
+                      img(src="", alt="")
+                  article
+                    .topic-item-slide
+                      h3 Дрели
+                      p Соседям на радость!
+                      a(href="catalog.html")
+                      img(src="", alt="")
+            div(id="controls")
+              label(for="switch0")
+              label(for="switch1")
+            div(id="active")
+              label(for="switch0")
+              label(for="switch1")
+        .topic-item
+          h3
+          a(href="")
+          img(src="", alt="")
+      .content-products
+        .popular-goods
+          h3 Популярные товары:
+          a(href="") все популярные товары
+        .goods
+          .goods-item
+            a(href="")
+              img(src="", alt="")
+            h3 Перфоратор BOSCH BFG 9000
+            p 32500 Р.
+            p 25500 Р.
+          .goods-item
+            a(href="")
+              img(src="", alt="")
+            h3 Перфоратор BOSCH BFG 3000
+            p 22500 Р.
+            p 15500 Р.
+          .goods-item
+            a(href="")
+              img(src="", alt="")
+            h3 Перфоратор BOSCH BFG 6000
+            p 30500 Р.
+            p 25500 Р.
+          .goods-item
+            a(href="")
+              img(src="", alt="")
+            h3 Перфоратор BOSCH BFG 2000
+            p 12500 Р.
+        .popular-manufacturer
+          h3 Популярные Производители:
+          a(href="") все производители
+        .manufacturers
+          .manufacturer-item
+            a(href="")
+              img(src="", alt="")
+          .manufacturer-item
+            a(href="")
+              img(src="", alt="")
+          .manufacturer-item
+            a(href="")
+              img(src="", alt="")
+          .manufacturer-item
+            a(href="")
+              img(src="", alt="")
+          .manufacturer-item
+            a(href="")
+              img(src="", alt="")
+          .manufacturer-item
+            a(href="")
+              img(src="", alt="")
+          .manufacturer-item
+            a(href="")
+              img(src="", alt="")
+          .manufacturer-item
+            a(href="")
+              img(src="", alt="")            
+      .content-services
+        .service
+          h3 Сервисы
+          p Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+          .service-items-list
+            ul.service-list
+              li.service-item1
+              a(href="") Доставка
+              li.service-item2 Гарантия
+              li.service-item3 Кредит
+          .service-items-description1
+          h3 Доставка
+          p Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!
+          img(src="", alt="")
+          .service-items-description2
+          h3 Гарантия
+          p Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.
+          img(src="", alt="")
+          .service-items-description3
+          h3 Кредит
+          p Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.
+          a(href="") ОТПРАВИТЬ ЗАЯВКУ
+          img(src="", alt="")
+      .content-about
+        .company
+          h2 Компания "Техномарт"
+          p Настоящий мужской шопинг начинается здесь! огромный выбор товаровдля ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах. 
+          p Мы можемдоставить ваш товар в самые отдельные точки России! Техномарт работает со многими ранспортными компаниями:
+          ul
+            li Деловые линии
+            li Автотрейдинг
+            li ЖелДорЭкспедиция
+          a(href="about.html") Подробнее о компании 
+        .contacts
+          h2 Контакты
+          p можете выбрать товар сами, заехав в наш офис:
+          iframe(src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;source=constructor" width="300" height="158" frameborder="0")
+          a(href="") Заблудились? Напишите нам!
     footer.page-footer
       .container
         .top-row
-          .logo-bottom Техномарт
-          ul
+          .logo-bottom
+            img(src="", alt="alt")
+          ul.link1
             li
               a(href="") Компания
             li
@@ -72,8 +202,8 @@ html(lang="ru")
               a(href="") Контакты
         .middle-row
           p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
-          a(href="tel:+78125550555")
-          ul 
+            a(href="tel:+78125550555") +7 (812) 555-05-55
+          ul.link2
             li
               a(href="") Материалы
             li
@@ -86,5 +216,5 @@ html(lang="ru")
           p © 2010-2017 Компания "Техномарт" Все права защищены
           img(src="", alt="alt")
           p Обратная связь
-          a(href="mailto:mail@htmlacademy.ru") 
-          p Разработано htmlacademy.ru
+          a(href="mailto:mail@htmlacademy.ru") mail@htmlacademy.ru
+          a(href="https://htmlacademy.ru/intensive/htmlcss") Разработано htmlacademy.ru
