fixed catalog file

--- a/catalog.pug
+++ b/catalog.pug
@@ -147,6 +147,19 @@ html(lang="ru")
               img(src="", alt="")
             h3.title Перфоратор BOSCH BFG 2000
             p.price 12500 Р.
+          .goods-item-navigation
+            ul
+              li
+                a(href="") 1
+              li
+                a(href="") 2
+              li
+                a(href="") 3
+              li
+                a(href="") Слудующая
+        .page-content-end
+          h3 пара слов о перфораторах
+          p Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
     footer.page-footer
       .container
         .top-row
